--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>User</th>
     <th></th>
     <th></th>
     <th></th>
@@ -9,6 +10,7 @@
 
 <% @carts.each do |cart| %>
   <tr>
+    <td><%= cart.user_id %></td>
     <td><%= link_to 'Show', cart %></td>
     <td><%= link_to 'Edit', edit_cart_path(cart) %></td>
     <td><%= link_to 'Destroy', cart, method: :delete, data: { confirm: 'Are you sure?' } %></td>
